Used OpenRewrite to migrate to springboot 3.0 and Java 17. Minor adjustment where needed like jpa deleteById didn't throw an exception when entity was not found.